--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Module 2</title>
 </head>
 <body>
+  <p id="text1">Text1</p>
+  <p id="text2">Text2</p>
+  <p id="text3">Text3</p>
   <script src="main.js"></script>
 </body>
 </html>
