add text and stlye

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Module 2</title>
+  <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-  <p id="text1">Text1</p>
-  <p id="text2">Text2</p>
-  <p id="text3">Text3</p>
+  <p class="changeColor" id="text1">Text1</p>
+  <p class="changeColor" id="text2">Text2</p>
+  <p class="changeColor" id="text3">Text3</p>
+  <p class="changeColor" id="text4">Text4</p>
+  <p class="changeColor" id="text5">Text5</p>
+  <p class="changeColor" id="text6">Text6</p>
   <script src="main.js"></script>
 </body>
 </html>
