add file js for previouslyHomework

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <p class="changeColor" id="text5">Text5</p>
   <p class="changeColor" id="text6">Text6</p>
   <script src="main.js"></script>
+  <script src="previously homework/peviouslyHomework.js"></script>
 </body>
 </html>
