--- a/Triphouse.html
+++ b/Triphouse.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Triphouse</title>
     <link rel="stylesheet" href="./style/style.css" />
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -32,7 +28,7 @@
               <svg class="header-img-btn__account">
                 <a href="#"><use xlink:href="./image/sprite.svg#accountcircle"></use></a>
               </svg>
-              <a href="#" class="header-img-btn__mobile_btn"onclick="$(this).toggleClass('mobile-btn-active');$('.header-menu-navigation__link').toggleClass('header-menu-navigation__link-activ');"><span></span></a>
+              <a href="#" class="header-img-btn__mobile_btn"><span></span></a>
             </div>
           </div>
         </div>
@@ -51,17 +47,17 @@
             </div>
             <div class="header-form__input-form col-1">
               <input type="text" id = "adults-head" required/>
-              <label for="people" class="adults-head">Adults</label>
+              <label for="adults-head" class="adults-head">Adults</label>
             </div>
             <span class="horizontal-line-input-one"></span>
             <div class="header-form__input-form col-1">
               <input type="text" id = "children-head" required/>
-              <label for="people" class="children-head">Children</label>
+              <label for="children-head" class="children-head">Children</label>
             </div>
             <span class="horizontal-line-input-one"></span>
             <div class="header-form__input-form col-1">
               <input type="text" id = "room-head" required/>
-              <label for="people" class="room-head">Room</label>
+              <label for="room-head" class="room-head">Room</label>
             </div>
             <div class="header-form__input-form col-2">
               <input type="submit" value="Search"/>
@@ -107,8 +103,8 @@
           </div>
         </form>
         <div class="store">
-          <div><a href="#"><img src="./image/google-play.svg" alt="google-play"></div></a>
-          <div><a href="#"><img src="./image/apple-store.svg" alt="apple-store"></div></a>
+          <div><a href="#"><img src="./image/google-play.svg" alt="google-play"></a></div>
+          <div><a href="#"><img src="./image/apple-store.svg" alt="apple-store"></a></div>
         </div>
       </div>
     </header>
