--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p class="changeColor" id="text4">Text4</p>
   <p class="changeColor" id="text5">Text5</p>
   <p class="changeColor" id="text6">Text6</p>
-  <script src="main.js"></script>
+  <script src="previously homework/main.js"></script>
   <script src="previously homework/peviouslyHomework.js"></script>
 </body>
 </html>
