--- a/Triphouse.html
+++ b/Triphouse.html
@@ -54,6 +54,7 @@
               <input type="text" id="people" required />
               <label for="people" class="people" id = "label_people">Adults - Children - Room</label>
             </div>
+            <div class="heder-form-drop" id="heder-form-drop"></div>
 
             <div class="header-form__input-form col-2">
               <input type="submit" value="Search"/>
